attempting to repair the white spaces of the website to match small-container div

--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@ gnulicense {
     resize: both;
     overflow: auto;
 }
+.{
+    background-color: #333333;
+}
 table, th, td {
     border: 1px solid black;
   }
